--- a/calculator/static/css/calculator.css
+++ b/calculator/static/css/calculator.css
@@ -1,12 +1,14 @@
 #calculator-container {
   margin-top: 200px;
-  height: 340px;
+  height: 345px;
   width: 260px;
   border-style: outset;
-  border-width: 3px;
+  border-width: 5px;
   border-color: #999;
   border-radius: 10px;
+  background-color: #fafafa;
 }
+
 
 #calculator-display {
   width: 192px;
@@ -21,6 +23,7 @@
   padding-left: 13px;
   margin-bottom: 10px;
   font-family: 'Share Tech Mono', monospace;
+  background-color: white;
 }
 
 .calculator-form {
@@ -36,6 +39,7 @@
 
 .bottom-input-buttons {
   width: 94px;
+  font-size: 12px;
 }
 
 input[type="button"] {
@@ -43,9 +47,14 @@ input[type="button"] {
 }
 
 #ti {
+  font-family: 'Share Tech Mono', monospace;
   padding-top: 10px;
   margin: 0px;
   font-size: 18px;
   text-align: right;
   font-weight: bold;
+}
+
+body {
+  background-color: #fcfcff !important;
 }
