--- a/calculator/templates/calculator.html
+++ b/calculator/templates/calculator.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <div class='container' id="calculator-container">
-          <p id="ti">TI-00</p>
+          <p id="ti">TI-01</p>
           <form class="calculator-form" name="calculator">
             
             <input type="text" id="calculator-display" value=""/>
@@ -41,6 +41,10 @@
 
             <input type="button" value="reverse" id="calculator-reverse" class="bottom-input-buttons"/>
             <input type="button" value="sort" id="calculator-sort" class="bottom-input-buttons"/>
+            <br>
+
+            <input type="button" value="palindrome?" id="calculator-palindrome" class="bottom-input-buttons"/>
+            <input type="button" value="prime?" id="calculator-prime" class="bottom-input-buttons"/>
             <br>
   
     
